# TFAS

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  README_RELEASE.md  environment.yml  pyproject.toml
configs/: attention.yaml  benchmark.yaml  causal.yaml  dashboard.yaml  extract.yaml  figures.yaml  geometry.yaml  metacog.yaml  models.yaml  probe.yaml  sae.yaml  wandb.yaml
deploy/: README.md  checkpoint_extract.py  cost_estimate.py  download_models.py  preflight_check.py  setup_fasrc.sh  setup_runpod.sh  slurm_extract.sh  slurm_full_pipeline.sh  slurm_probes.sh  verify_gpu.py
docs/: CONTRIBUTING.md  LESSONS_LEARNED_COMPACT.md  RELEASE_NOTES.md  SESSION_STATE.md  advisor_summary.md  af_post_draft.md  architecture.md  causal_steering_analysis.md  cogbias_comparison.md  confidence_analysis.md  confound_analysis.md  consistency_check.md  critical_self_review.md  cross_model_transfer_analysis.md  data_contract.md  expanded_behavioral_analysis.md  figure_layout.md  final_abstract.md  final_proofread.md  gigerenzer_analysis.md  gpu_status_report.md  iclr_plan.md  icml_conversion_guide.md  multiseed_analysis.md  natural_freq_failure_analysis.md  neurips_abstract.md  neurips_abstract_v2.md  neurips_contributions.md  neurips_proofread.md  neurips_submission_metadata.md  olmo32b_final_results.md  olmo32b_progress.md  olmo32b_think_probes.md  olmo3_progress.md  paper_consistency_final.md  paper_quality_check.md  preregistration.md  presentation_outline.md  r1_multiseed_results.md  r1_steering_results.md  (+8 more)
notebooks/: 00_benchmark_exploration.ipynb  01_behavioral_validation.ipynb  02_probing_analysis.ipynb  03_sae_features.ipynb  04_attention_entropy.ipynb  05_geometry_and_cka.ipynb
paper/: Makefile  checklist.tex  main.tex  neurips_paper.aux  neurips_paper.bbl  neurips_paper.blg  neurips_paper.out  neurips_paper.tex  neurips_paper_anonymous.aux  neurips_paper_anonymous.bbl  neurips_paper_anonymous.blg  neurips_paper_anonymous.out  neurips_paper_anonymous.tex  references.bib  supplementary.aux  supplementary.bbl  supplementary.blg  supplementary.tex  workshop_paper.aux  workshop_paper.bbl  workshop_paper.blg  workshop_paper.out  workshop_paper.tex  workshop_paper_anonymous.aux  workshop_paper_anonymous.tex  workshop_paper_icml.aux  workshop_paper_icml.bbl  workshop_paper_icml.blg  workshop_paper_icml.out  workshop_paper_icml.tex
results/: canonical_numbers.json  final_statistics.json
scripts/: dry_run.py  (+61 more)
(+221 files in other folders)
